[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scene/Networks/HauntedDream/HauntedDreamNetwork.gd" type="Script" id=1]
[ext_resource path="res://Scene/Networks/GGJ2021.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/GameFont.tres" type="DynamicFontData" id=4]

[sub_resource type="StreamTexture" id=13]
flags = 4
load_path = "res://.import/ItchIo.png-58ebd2e43b215b945138e67e79a85772.stex"

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.607843, 0, 0, 0.784314 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.784314 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 384, 32 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.541176, 0, 0.470588, 0.784314 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 1, 1, 1, 0.784314 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=27]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 260, 31.3846 )

[sub_resource type="StreamTexture" id=18]
flags = 4
load_path = "res://.import/Twitter.png-49ec27b1215a87fdbe164aef2f02a0d2.stex"

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0.196078, 0.607843, 0.784314 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
shadow_color = Color( 0, 1, 0, 0.6 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 0.784314 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 304, 32 )

[sub_resource type="Animation" id=19]
resource_name = "itchio_appear"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ItchIO/ItchIOPanel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.3 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "itchio" ],
"method": "call_website"
} ]
}

[sub_resource type="Animation" id=20]
resource_name = "twitter_appear"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Twitter/TwitterPanel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "twitter" ],
"method": "call_website"
} ]
}

[sub_resource type="Animation" id=24]
resource_name = "global_appear"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("GGJ/GlobalPanel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.3 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "global" ],
"method": "call_website"
} ]
}

[node name="HauntedDreamNetwork" type="Node2D"]
script = ExtResource( 1 )
itch_link = "https://weact.itch.io/haunted-dream"
global_link = "https://globalgamejam.org/2021/games/haunted-dream-2"

[node name="ItchIO" type="Sprite" parent="."]
position = Vector2( 0, -64 )
texture = SubResource( 13 )

[node name="ItchIOPanel" type="Panel" parent="ItchIO"]
show_behind_parent = true
anchor_left = 3.875
anchor_top = 0.5
anchor_right = 3.875
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -80.0
margin_right = 496.0
margin_bottom = 16.0
rect_scale = Vector2( 1.2, 1.3 )
rect_pivot_offset = Vector2( 268, 48 )
mouse_filter = 2
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ItchIO"]
modulate = Color( 1, 1, 1, 0.784314 )
self_modulate = Color( 1, 1, 1, 0.627451 )
anchor_left = 4.629
anchor_top = 0.5
anchor_right = 4.629
anchor_bottom = 0.5
margin_left = -256.256
margin_top = -64.0
margin_right = 431.744
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="ItchIO"]
margin_left = 40.0
margin_top = -32.0
margin_right = 724.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 5 )
text = "https://weact.itch.io/haunted-dream"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="itcharea" type="Area2D" parent="ItchIO"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItchIO/itcharea"]
position = Vector2( 344, 0 )
shape = SubResource( 6 )

[node name="GGJ" type="Sprite" parent="."]
position = Vector2( 8, 88 )
scale = Vector2( 1.2, 1.3 )
texture = ExtResource( 2 )

[node name="GlobalPanel" type="Panel" parent="GGJ"]
show_behind_parent = true
anchor_left = 3.875
anchor_top = 0.5
anchor_right = 3.875
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -80.0
margin_right = 248.0
margin_bottom = 16.0
rect_scale = Vector2( 1.2, 1.3 )
rect_pivot_offset = Vector2( 268, 48 )
mouse_filter = 2
custom_styles/panel = SubResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GGJ"]
modulate = Color( 1, 1, 1, 0.784314 )
self_modulate = Color( 1, 1, 1, 0.627451 )
anchor_left = 4.629
anchor_top = 0.5
anchor_right = 4.629
anchor_bottom = 0.5
margin_left = -256.256
margin_top = -64.0
margin_right = 175.744
mouse_filter = 2
custom_styles/panel = SubResource( 26 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="GGJ"]
margin_left = 40.0
margin_top = -32.0
margin_right = 464.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 27 )
text = "GGJ2021/HAUNTED-DREAM"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="globalarea" type="Area2D" parent="GGJ"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GGJ/globalarea"]
position = Vector2( 220, -0.615379 )
shape = SubResource( 28 )

[node name="Twitter" type="Sprite" parent="."]
visible = false
position = Vector2( -40, 80 )
texture = SubResource( 18 )

[node name="TwitterPanel" type="Panel" parent="Twitter"]
show_behind_parent = true
anchor_left = 3.875
anchor_top = 0.5
anchor_right = 3.875
anchor_bottom = 0.5
margin_left = -304.25
margin_top = -95.5
margin_right = 335.75
margin_bottom = 32.5
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 268, 48 )
mouse_filter = 2
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Panel" type="Panel" parent="Twitter"]
modulate = Color( 1, 1, 1, 0.784314 )
self_modulate = Color( 1, 1, 1, 0.627451 )
anchor_left = 4.629
anchor_top = 0.5
anchor_right = 4.629
anchor_bottom = 0.5
margin_left = -254.998
margin_top = -55.5
margin_right = 273.002
margin_bottom = 8.5
mouse_filter = 2
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Twitter"]
margin_left = 40.0
margin_top = -24.0
margin_right = 556.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 10 )
text = "https://twitter.com/weacct"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="twitterarea" type="Area2D" parent="Twitter"]
position = Vector2( 0, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Twitter/twitterarea"]
position = Vector2( 264, 0 )
shape = SubResource( 11 )
disabled = true
__meta__ = {
"_editor_description_": ""
}

[node name="ItchIOPlayer" type="AnimationPlayer" parent="."]
anims/itchio_appear = SubResource( 19 )

[node name="TwitterPlayer" type="AnimationPlayer" parent="."]
anims/twitter_appear = SubResource( 20 )

[node name="GlobalPlayer" type="AnimationPlayer" parent="."]
anims/global_appear = SubResource( 24 )
